--- a/companion/manifest.json
+++ b/companion/manifest.json
@@ -25,12 +25,6 @@
 		"entrypoint": "..\\index.js"
 	},
 	"manufacturer": "PresentationTools",
-	"products": [
-		"Auto Presentation Switcher"
-	],
-	"keywords": [
-		"Presentation",
-		"Show Control",
-		"Software"
-	]
+	"products": ["Auto Presentation Switcher"],
+	"keywords": ["Presentation", "Show Control", "Software"]
 }
