--- a/companion/manifest.json
+++ b/companion/manifest.json
@@ -3,7 +3,7 @@
 	"name": "presentationtools-aps",
 	"shortname": "aps",
 	"description": "Module to control Auto Presentation Switcher",
-	"version": "2.0.1",
+	"version": "2.0.2",
 	"license": "MIT",
 	"repository": "git+https://github.com/bitfocus/companion-module-presentationtools-aps.git",
 	"bugs": "https://github.com/bitfocus/companion-module-presentationtools-aps/issues",
@@ -15,6 +15,10 @@
 		{
 			"name": "David Dabela",
 			"email": "david.dabela@outlook.com"
+		},
+		{
+			"name": "Joseph Adams",
+			"email": "josephdadams@gmail.com"
 		}
 	],
 	"legacyIds": [],
@@ -22,7 +26,7 @@
 		"type": "node18",
 		"api": "nodejs-ipc",
 		"apiVersion": "1.0.0",
-		"entrypoint": "..\\index.js"
+		"entrypoint": "../index.js"
 	},
 	"manufacturer": "PresentationTools",
 	"products": ["Auto Presentation Switcher"],
