--- a/companion/manifest.json
+++ b/companion/manifest.json
@@ -3,22 +3,14 @@
 	"name": "presentationtools-aps",
 	"shortname": "aps",
 	"description": "Module to control Auto Presentation Switcher",
-	"version": "2.0.3",
+	"version": "2.0.4",
 	"license": "MIT",
 	"repository": "git+https://github.com/bitfocus/companion-module-presentationtools-aps.git",
 	"bugs": "https://github.com/bitfocus/companion-module-presentationtools-aps/issues",
 	"maintainers": [
 		{
-			"name": "Mohammad Ahmad",
-			"email": "eng.ma90@gmail.com"
-		},
-		{
-			"name": "David Dabela",
-			"email": "david.dabela@outlook.com"
-		},
-		{
-			"name": "Joseph Adams",
-			"email": "josephdadams@gmail.com"
+			"name": "PresentationTools A/S",
+			"email": "info@presentationtools.com"
 		}
 	],
 	"legacyIds": [],
