--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "presentationtools-aps",
-	"version": "2.3.0",
+	"version": "2.3.1",
 	"main": "index.js",
 	"prettier": "@companion-module/tools/.prettierrc.json",
 	"scripts": {
@@ -16,6 +16,7 @@
 		"@companion-module/base": "~1.5.1"
 	},
 	"devDependencies": {
-		"@companion-module/tools": "^1.4.2"
+		"@companion-module/tools": "^1.4.2",
+		"prettier": "^3.3.3"
 	}
 }
